<resources>
    <string name="app_name">ChitChat</string>
    <string name="chat_activity">CHAT ACTIVITY</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome\n back!</string>
    <string name="welcome_back_land">Welcome back!</string>
    <string name="create_account">Create account</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="create_an_account">Create an account</string>
    <string name="friends">Friends</string>
    <string name="recent_chat">Recent chat</string>
    <string name="sign_out">Sign out</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="recentchat">Recent chat</string>
    <string name="userEmail" translatable="false">Your email</string>
    <string name="name">Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="button">Delete</string>
    <string name="username">Username</string>
    <string name="my_friends">My Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="chat_between_you_and_your_friend">Chat between you and your friend</string>
    <string name="sendername">SenderName</string>


</resources>